# renting-flat-bot

./: .gitignore  pyproject.toml
renting_flat_bot/bot/: main.py  utils.py
